Basic working version

--- a/brucebanner.css
+++ b/brucebanner.css
@@ -3,7 +3,7 @@
 	height: 210px;
 	overflow: hidden;
 	margin-bottom:1em;
-	background: #222222 url('<t4 type="media" id="22275" formatter="image/path"/>') center center no-repeat;
+	background: #222222;
 }
 
 
